--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -84,6 +84,11 @@
     <ul>
       <li><a href="slides/econometrics-slides-06.pdf">講義スライド (PDF)</a></li>
     </ul>
+    
+    <h3>7. データの可視化 I</h3>
+    <ul>
+      <li><a href="R/tables-n-figures.html">Rによる図表の作成</a></li>
+    </ul>
 
 
   <!-- end .content -->
