--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -79,15 +79,16 @@
   <ul>
     <li><a class="black" href="http://www.jpsa-web.org/" target="_blank">日本政治学会</a>：2015</li>
     <li><a class="black" href="http://www.jaesnet.org/" target="_blank">日本選挙学会</a>：2011, 2012, 2013, 2014</li>
-    <li><a class="black" href="http://www.jacpnet.org/" target="_blank">日本比較政治学会</a>：2012, 2014, 2016</li>
+    <li><a class="black" href="http://www.jacpnet.org/" target="_blank">日本比較政治学会</a>：2012, 2014, 2016, 2017</li>
     <li><a class="black" href="http://chihoseijigakkai.jimdo.com/" target="_blank">日本地方政治学会・日本地域政治学会</a>：2012</li>
     <li><a class="black" href="http://www.apsanet.org/" target="_blank">American Political Science Association</a>： 2012 [x2]</li>
     <li><a class="black" href="http://www.apsanet.org/" target="_blank">American Political Science Association</a>, <a class="black" href="http://www.apsanet.org/tlc" target="_blank">Teaching and Learning Conference</a>： 2016</li>
-    <li><a class="black" href="https://ecpr.eu/" target="_blank">European Consortium for Political Research</a>：2016</li>
+    <li><a class="black" href="https://ecpr.eu/" target="_blank">European Consortium for Political Research</a>：2016, 2018</li>
+    <li><a class="black" href="http://www.ipsa.org/" target="_blank">International Political Science Association</a>： 2018 [x2]</li>
     <li><a class="black" href="http://www.mpsanet.org/" target="_blank">Midwest Political Science Association</a>：2009, 2010, 2016</li>
     <li><a class="black" href="http://www.psa.ac.uk/" target="_blank">Political Studies Association</a>：2011</li>
     <li><a class="black" href="https://sase.org" target="_blank">Society for the Advancement of Socio-Economics</a>：2015</li>
-    <li><a class="black" href="http://spsa.net/" target="_blank">Southern Political Sceicen Association</a>：2012 [x2], 2016 [x2]</li>
+    <li><a class="black" href="http://spsa.net/" target="_blank">Southern Political Sceicen Association</a>：2012 [x2], 2016 [x2], 2018</li>
     
   </ul>
    
@@ -101,6 +102,7 @@
   <h3>研究費・奨学金</h3>
   
   <ul>
+    <li>アメリカ南部政治学会, Walter Beach Award（2018年）</li>
     <li>科学研究費補助金・若手B・No.16K17051（2016-18年度）</li>
     <li>科学研究費補助金・若手B・No. 25780102（2013-15年度）</li>
     <li>アメリカ南部政治学会, Prestage-Cook Award（2012年）</li>
