--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -78,6 +78,7 @@
     <ul>
       <li><a href="R/causality.html">Rを使った基本的な因果推論</a></li>
       <li><a href="assignments/econometrics-2018-hw02.html">課題2</a>（提出期限：10月30日の授業開始時）</li>
+      <li><a href="assignments/econometrics-2018-hw02-answers.html">課題2の解答例</a></li>
     </ul>
     
     <h3>6. 測定 I</h3>
@@ -88,6 +89,11 @@
     <h3>7. データの可視化 I</h3>
     <ul>
       <li><a href="R/tables-n-figures.html">Rによる図表の作成</a></li>
+    </ul>
+    
+    <h3>8. 測定 II</h3>
+    <ul>
+      <li><a href="slides/econometrics-slides-08.pdf">講義スライド (PDF)</a></li>
     </ul>
 
 
