--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -39,7 +39,7 @@
   
   <h3>論文</h3>
   <ul> 
-        <li>Playing Is Believing. Teaching How Electoral Systems Change Political Outcomes Using a Role-Playing Simulation Game (<a href="https://soheishigemura.com/" target="_blank">重村壮平</a> 氏, <a href="http://www.jaysong.net/" target="_blank">宋財泫</a> 氏, 谷圭祐 氏と共著).
+        <li>Playing Is Believing: Teaching How Electoral Systems Change Political Outcomes Using a Role-Playing Simulation Game (<a href="https://soheishigemura.com/" target="_blank">重村壮平</a> 氏, <a href="http://www.jaysong.net/" target="_blank">宋財泫</a> 氏, 谷圭祐 氏と共著).
         <a class="booktitle" href="http://www.jpsa-web.org/eibun_zassi/political-science-journal-en.html" targett="_blank">Japanese Political Science Review</a> 4: 117-143 (2018) [<a class="abst" href="/research/abstracts/playing-is-believing.html" target="_blank">要旨</a>]
         </li>
   
