--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -103,6 +103,7 @@
     
     <h3>10. 予測と線形回帰</h3>
     <ul>
+      <li><a href="R/prediction.html">予測（教科書第4章のRコードを書き換える）</a></li>
       <!-- <li><a href="slides/econometrics-slides-10.pdf">講義スライド (PDF)</a></li> -->
     </ul>
     
