update hr2017 data

--- a/jp/resources/scrape-hr2017.html
+++ b/jp/resources/scrape-hr2017.html
@@ -148,9 +148,13 @@ $(document).ready(function () {
 <h1 class="title toc-ignore">第48回衆議院議員総選挙データ: 2017 Japanese General Election Data</h1>
 <h3 class="subtitle"><em>Rによる2017年衆院選（2017年10月22日実施）データのスクレイピング</em></h3>
 <h4 class="author"><em>矢内 勇生 (<a href="http://yukiyanai.com">yukiyanai.com</a>)</em></h4>
-<h4 class="date"><em>2017-10-23 (rev: 2017-10-24)</em></h4>
+<h4 class="date"><em>2017-10-23 (rev: 2017-10-24, 2018-11-06)</em></h4>
 
 </div>
+
+<br>
+<p><b>2018-11-06：</b>小選挙区のデータと比例区の候補者別データを修正しました。愛知2区の田畑毅氏が比例で復活当選しているのに、元のデータでは落選扱いになっていました。台風の影響で開票が遅れ、スクレイピングを実行した時点では復活当選の結果が出ていなかったようです（前田耕さんからご指摘いただきました）。</p>
+<br>
 
 <div id="TOC">
 <ul>
