--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -111,9 +111,11 @@
     <ul>
       <li><a href="R/intro-to-regression.html">回帰分析入門</a></li>
     </ul>
-
-
-
+    
+    <h3>13. 回帰分析の実行 II</h3>
+    <ul>
+      <li><a href="R/linear-regression.html">回帰分析の応用</a></li>
+    </ul>
 
 
   <!-- end .content -->
