--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -99,6 +99,7 @@
     <h3>9. データの可視化 II</h3>
     <ul>
       <li><a href="assignments/econometrics-2018-hw03.html">課題3</a>（提出期限：11月16日の授業開始時）</li>
+      <li><a href="assignments/econometrics-2018-hw03-answers.html">課題3の解答例</a></li>
     </ul>
     
     <h3>10. 予測と線形回帰</h3>
