--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -117,6 +117,12 @@
     <ul>
       <li><a href="R/linear-regression.html">回帰分析の応用</a></li>
     </ul>
+    
+    <h3>14. 回帰分析の応用</h3>
+    <ul>
+      <li><a href="slides/econometrics-slides-14.pdf">講義スライド (PDF)</a></li>
+    </ul>
+
 
 
   <!-- end .content -->
