--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -122,8 +122,11 @@
     <ul>
       <li><a href="slides/econometrics-slides-14.pdf">講義スライド (PDF)</a></li>
     </ul>
-
-
+    
+    <h3>15. 再現可能な研究</h3>
+    <ul>
+      <li><a href="slides/econometrics-slides-15.pdf">講義スライド (PDF)</a></li>
+    </ul>
 
   <!-- end .content -->
   </div>
