--- a/jp/classes/rm1_2014/index.html
+++ b/jp/classes/rm1_2014/index.html
@@ -25,7 +25,7 @@
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
   <a class="white-red" href="/~yyanai/jp/classes/">授業</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/quant-methods-stata/">Stataによる計量政治学</a>
+  <a class="white-red" href="/jp/textbooks/">教科書</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/~yyanai/jp/resources/">その他</a>
   <!-- InstanceEndEditable -->
