--- a/jp/index.html
+++ b/jp/index.html
@@ -25,7 +25,7 @@
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
   <a class="white-red" href="/jp/classes/" target="_top">授業</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="current" href="/jp/textbooks/">教科書</a>
+  <a class="white-red" href="/jp/textbooks/">教科書</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/jp/resources/" target="_top">その他</a>
   <!-- InstanceEndEditable -->
