update publication page

--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -51,8 +51,13 @@
   
   <h3>著書</h3>
   <ul>
-    <li>『<a href="/jp/quant-methods-stata/">Stataによる 計量政治学</a>』  (<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著) (2013年2月, オーム社) 
-    <div class="exp"> ISBN: 978-4-274-06910-9&nbsp;&nbsp; 単行本・Kindle版は <a href="http://amazon.co.jp/dp/4274069109/" target="_blank">amazon.co.jp</a>で、 PDF版は<a href="http://estore.ohmsha.co.jp/titles/978427406910P" target="_blank">オーム社のウェブサイト</a>で購入できます.</div><br>
+    <li>『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』  (<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著) (2018年12月, オーム社) 
+    <div class="exp"> ISBN: 978-4-274-22313-2</div>
+    <div class="exp"> <a href="https://amazon.co.jp/dp/4274223132/" target="_blank">amazon.co.jp</a>で購入できます.</div>
+     <div class="exp">本書の分析に使ったデータセット, Rスクリプト, 練習問題の解答例は<a href="https://github.com/yukiyanai/quant-methods-R">本書のページ</a>で.</div></li> 
+    <li>『<a href="/jp/quant-methods-stata/">Stataによる計量政治学</a>』  (<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著) (2013年2月, オーム社) 
+    <div class="exp"> ISBN: 978-4-274-06910-9</div>
+    <div class="exp"><a href="http://amazon.co.jp/dp/4274069109/" target="_blank">amazon.co.jp</a>で購入できます.</div>
      <div class="exp">本書の分析に使ったデータセットとStataのコード, Rで分析するための方法は<a href="/jp/quant-methods-stata/">本書のページ</a>で.</div></li> 
   </ul>
   
