--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -39,13 +39,13 @@
   
   <h3>論文</h3>
   <ul> 
-        <li>Playing Is Believing: Teaching How Electoral Systems Change Political Outcomes Using a Role-Playing Simulation Game (<a href="https://soheishigemura.com/" target="_blank">重村壮平</a> 氏, <a href="http://www.jaysong.net/" target="_blank">宋財泫</a> 氏, 谷圭祐 氏と共著).
+        <li><a href="http://www.jpsa-web.org/eibun_zassi/data/pdf/vol4/2018004.pdf" target="_blank">Playing Is Believing: Teaching How Electoral Systems Change Political Outcomes Using a Role-Playing Simulation Game</a> (<a href="https://soheishigemura.com/" target="_blank">重村壮平</a> 氏, <a href="http://www.jaysong.net/" target="_blank">宋財泫</a> 氏, 谷圭祐 氏と共著).
         <a class="booktitle" href="http://www.jpsa-web.org/eibun_zassi/political-science-journal-en.html" targett="_blank">Japanese Political Science Review</a> 4: 117-143 (2018) [<a class="abst" href="/research/abstracts/playing-is-believing.html" target="_blank">要旨</a>]
         </li>
   
-        <li> Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet (<a href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> 氏と共著).『選挙研究』30(2): 60-74 (2014)  [<a class="abst" href="abstracts/bicameralism-parliamentarism.html" target="_blank">要旨</a>]</li>
+        <li>Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet (<a href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> 氏と共著).『選挙研究』30(2): 60-74 (2014)  [<a class="abst" href="abstracts/bicameralism-parliamentarism.html" target="_blank">要旨</a>]</li>
         
-        <li> External Threats, US Bases, and Prudent Voters in Okinawa (<a href="https://sites.google.com/site/kojikagotani/" target="_blank">籠谷公司</a> 氏と共著). <a class="booktitle" href="http://irap.oxfordjournals.org/" target="_blank">International Relations of the Asia-Pacific</a> 14(1): 91-115 (Jan. 2014)  [<a class="abst" href=" https://doi.org/10.1093/irap/lct017 " target="_blank">要旨</a>]       
+        <li><a href="https://academic.oup.com/irap/article/14/1/91/739395" target="_blank">External Threats, US Bases, and Prudent Voters in Okinawa</a> (<a href="https://sites.google.com/site/kojikagotani/" target="_blank">籠谷公司</a> 氏と共著). <a class="booktitle" href="http://irap.oxfordjournals.org/" target="_blank">International Relations of the Asia-Pacific</a> 14(1): 91-115 (Jan. 2014)  [<a class="abst" href=" https://doi.org/10.1093/irap/lct017 " target="_blank">要旨</a>]       
         <div class="exp">分析再現用のデータセットは<a href="https://sites.google.com/site/kojikagotani/" target="_blank">共著者のウェブサイト</a>にあります.</div></li>
   </ul>
   
