update for academic year of 2019

--- a/teaching/pubadmin/index.html
+++ b/teaching/pubadmin/index.html
@@ -66,20 +66,20 @@ primarily on national administrative systems. Critical and comparative views are
   </ul>
     
  
-      <!-- end .content -->
+  <!-- end .content -->
   </div>
   <!-- InstanceEndEditable -->
   <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.iuj.ac.jp/gsir/" target="_blank">Graduate School of International Relations</a>, <a class="white-white" href="http://www.iuj.ac.jp/" target="_blank">International Unversity of Japan</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;777 Kokusai-cho, Minami-Uonuma, Niigata 949-7277, JAPAN</td>
+      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
-      <td align="right"> &copy; 2014-2017 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
+      <td align="right"> &copy; 2014-2019 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
   </table>
   <!-- end .footer --></div>
