--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -37,11 +37,11 @@
   <div class="content">
   <h2>計量経済学応用</h2>
   
-    <p>2018年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
+    <p>2019年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
     
   
 
-  <h4><a class="black" href="docs/syllabus-applied-econometrics_2018-1Q.pdf">シラバス（改訂：2018-04-18; 2018-05-06; 2018-05-18）</a></h4>
+  <h4><a class="black" href="docs/syllabus-applied-econometrics_2019-1Q.pdf">シラバス</a></h4>
 
      <br>
   
@@ -77,7 +77,7 @@
     </tr>
     <tr>
       <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2018 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="right"> &copy; 2014-2019 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
   <!-- end .footer --> </div>
