--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -37,11 +37,11 @@
   <div class="content">
   <h2>統計学 2</h2>
   
-    <p>2018年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
+    <p>2019年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
     
   
 
-  <h4><a class="black" href="docs/syllabus-stat2_2018-1Q.pdf">シラバス（改訂：2018-04-19; 2018-04-25; 2018-05-07）</a></h4>
+  <h4><a class="black" href="docs/syllabus-stat2_2019-1Q.pdf">シラバス</a></h4>
 
      <br>
   
@@ -57,7 +57,7 @@
   <h4>教科書</h4>
   
   <ul>
-    <li> 山田剛史, 杉澤武俊, 村井潤一郎. 2008.『<a href="http://amazon.jp/dp/4274067106" target="_blank">Rによるやさしい統計学</a>』オーム社.</li>
+    <li> 浅野正彦, 矢内勇生. 2018.『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』オーム社.</li>
   </ul>
   
 
@@ -77,7 +77,7 @@
     </tr>
     <tr>
       <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2018 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="right"> &copy; 2014-2019 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
   <!-- end .footer --> </div>
