--- a/teaching/index.html
+++ b/teaching/index.html
@@ -35,16 +35,19 @@
   <div class="content">
   <h2>Courses</h2>
   
-  <h3>Current (Fall 2018)</h3>
+  <h3>Current (Spring 2019)</h3>
   <ul>
-    <li><a href="/jp/classes/econometrics1/" target="_blank">Econometrics</a> (in Japanese)</li>
-    <li><a href="/jp/classes/info3/" target="_blank">Information Science III</a> (in Japanese)</li>
+    <li><a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u; in Japanse)</li>
+    <li><a href="/jp/classes/econometrics2/" target="_blank">Applied Econometrics</a> (u; in Japanese)</li>
   </ul>
+
   <h3>Past</h3>
   <h4>Kochi University of Technology</h4>
-   <ul>
-    <li><a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u) Spring 2018</li>
-    <li><a href="/jp/classes/econometrics2/" target="_blank">Applied Econometrics</a> (u) Spring 2018</li>
+  <ul>
+    <li><a href="/jp/classes/econometrics1/" target="_blank">Econometrics</a> (u; in Japanese) Fall 2019</li>
+    <li><a href="/jp/classes/info3/" target="_blank">Information Science III</a> (u; in Japanese) Fall 2019</li>
+    <li>Statistics 2 (u) Spring 2018</li>
+    <li>Applied Econometrics (u) Spring 2018</li>
   </ul>
   
   
