--- a/jp/index.html
+++ b/jp/index.html
@@ -39,6 +39,8 @@
   <h3>政治学博士 (Ph.D. in Political Science)</h3>
   <h3><a href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> 経済・マネジメント学群 講師</h3>
   
+  <h4><a href="http://www.law.kobe-u.ac.jp/">神戸大学大学院 法学研究科</a> 研究員（2019年4月〜）</h4>
+  
   <h4>専門</h4>
   <p>&nbsp;&nbsp;比較政治学<br>
      &nbsp;&nbsp;政治経済学<br>
@@ -48,6 +50,7 @@
   
   <h4>研究テーマ</h4>
   <p>
+     &nbsp;&nbsp;選挙タイミングの決定要因と帰結<br>
      &nbsp;&nbsp;経済格差と政治行動の関係<br>
      &nbsp;&nbsp;議会制民主主義諸国における二院制の役割<br>
      &nbsp;&nbsp;経済危機に対する政党の対応と社会的連合の（再）形成<br>
