--- a/jp/textbooks/index.html
+++ b/jp/textbooks/index.html
@@ -45,7 +45,7 @@
     <h4>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.ohmsha.co.jp/" target="_blank">オーム社</a></h4>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;2018年</h3>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-274-22313-2</h3> 
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a class="red" href="http://amazon.co.jp/dp/4274223132/" target="_blank">amazon.co.jp</a>で予約購入できます.</h3>
+    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a class="red" href="http://amazon.co.jp/dp/4274223132/" target="_blank">amazon.co.jp</a>で購入できます.</h3>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">サポートページ</a></h3>
     
     <br><br><br><br><br>
