--- a/jp/index.html
+++ b/jp/index.html
@@ -40,6 +40,7 @@
   <h3><a href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> 経済・マネジメント学群 講師</h3>
   
   <h4><a href="http://www.law.kobe-u.ac.jp/">神戸大学大学院 法学研究科</a> 研究員（2019年4月〜）</h4>
+  <h4>早稲田大学 EU研究所 招聘研究員（2018年9月〜）</h4>
   
   <h4>専門</h4>
   <p>&nbsp;&nbsp;比較政治学<br>
