update conference presentations

--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -90,7 +90,7 @@
     <li><a class="black" href="http://www.apsanet.org/" target="_blank">American Political Science Association</a>, <a class="black" href="http://www.apsanet.org/tlc" target="_blank">Teaching and Learning Conference</a>： 2016</li>
     <li><a class="black" href="https://ecpr.eu/" target="_blank">European Consortium for Political Research</a>：2016, 2018</li>
     <li><a class="black" href="http://www.ipsa.org/" target="_blank">International Political Science Association</a>： 2018 [x2]</li>
-    <li><a class="black" href="http://www.mpsanet.org/" target="_blank">Midwest Political Science Association</a>：2009, 2010, 2016</li>
+    <li><a class="black" href="http://www.mpsanet.org/" target="_blank">Midwest Political Science Association</a>：2009, 2010, 2016, 2019 [x2]</li>
     <li><a class="black" href="http://www.psa.ac.uk/" target="_blank">Political Studies Association</a>：2011</li>
     <li><a class="black" href="https://sase.org" target="_blank">Society for the Advancement of Socio-Economics</a>：2015</li>
     <li><a class="black" href="http://spsa.net/" target="_blank">Southern Political Sceicen Association</a>：2012 [x2], 2016 [x2], 2018</li>
