--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -65,7 +65,16 @@
     <h3>4. 記述統計とデータの可視化 (2)</h3>
     <ul>
        <!-- <li>この回は講義スライドなし</a></li>-->
-      <li><a href="R/r-markdown.html">Rマークダウン入門と2変数の記述統計</a></li>
+      <li><a href="R/r-markdown.html">Rマークダウン入門と2変数の記述統計</a>
+        <ul>
+          <li></li>
+          <li>Rマークダウン入門のRmdファイル (<a href="R/r-markdown.Rmd">r-markdown.Rmd</a>)</li>
+          <li>Rマークダウン入門のPDFファイル (<a href="R/r-markdown.PDF">r-markdown.PDF</a>)</li>
+          <li>スタイルシート (<a href="R/my-markdown.css">my-markdown.css</a>)</li>
+        </ul>
+      </li>
+    </ul>
+
     </ul>
     
      <h3>5. 統計的推定と仮説検定の基礎</h3>
