--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -71,7 +71,7 @@
    
    <h3>4. 単回帰分析 (1) </h3>
      <ul>
-       <!-- <li> <a href="slides/applied-econometrics-slides-05.pdf">講義スライド</a></li> -->
+       <li> <a href="slides/applied-econometrics-slides-04.pdf">講義スライド</a></li>
        <li><a href="R/linear-regression-1.html">単回帰分析 I</a></li> 
      </ul>
      
