--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -41,7 +41,7 @@
     
   
 
-  <h4><a class="black" href="docs/syllabus-stat2_2019-1Q.pdf">シラバス</a></h4>
+  <h4><a class="black" href="docs/syllabus-stat2_2019-1Q.pdf">シラバス（改訂：2019-04-23）</a></h4>
 
      <br>
   
