--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -78,7 +78,7 @@
     <h3>5. ヤバいグラフ</h3>
     <ul>
       <li>講義スライドは配布しない</li>
-      <li><a href="slides/stat2-2019-assignment2.pdf">課題2</a>（<b>提出期限：5月9日の授業開始時</b></li>
+      <li><a href="slides/stat2-2019-assignment2.pdf">課題2</a>（<b>提出期限：5月9日の授業開始時）</b></li>
     </ul>
     
     <h3>6. ggplot2入門</h3>
