--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -81,6 +81,13 @@
        <li><a href="R/linear-regression-simulation1.html">単回帰分析のシミュレーション</a></li> 
        <li><a href="R/econom2-assignment02.html">課題2</a>（<b>締切：2019年5月9日の授業開始時</b>）</li>
      </ul>
+     
+  <h3>6. 重回帰分析 (1) </h3>
+     <ul>
+       <!-- <li> <a href="slides/applied-econometrics-slides-05.pdf">講義スライド</a></li> -->
+       <li><a href="R/omitted-variable-bias.html">欠落変数バイアスのシミュレーション</a></li> 
+     </ul>
+
  <!--     
     <h3>4. 因果推論入門</h3>
      <ul>
