--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -64,7 +64,7 @@
     
     <h3>4. 記述統計とデータの可視化 (2)</h3>
     <ul>
-       <!-- <li>この回は講義スライドなし</a></li>-->
+       <li>この回は講義スライドなし</a></li>
       <li><a href="R/r-markdown.html">Rマークダウン入門と2変数の記述統計</a>
         <ul>
           <li></li>
@@ -83,6 +83,7 @@
 
     <h3>6. ggplot2 を使ったデータの可視化</h3>
     <ul>
+        <li><a href="slides/stat2-slides-06。pdf">講義スライド</a></li>
         <li><a href="R/intro-to-ggplot2.html">ggplot2入門</a> </li>
         <li><a href="slides/stat2-2019-assignment3.pdf">課題3</a>（<b>提出期限：5月16日の授業開始時</b>）</li>
     </ul>
