update stat2 and econom2

--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -84,7 +84,7 @@
      
   <h3>6. 重回帰分析 (1) </h3>
      <ul>
-       <!-- <li> <a href="slides/applied-econometrics-slides-05.pdf">講義スライド</a></li> -->
+       <li> <a href="slides/applied-econometrics-slides-06.pdf">講義スライド</a></li>
        <li><a href="R/omitted-variable-bias.html">欠落変数バイアスのシミュレーション</a></li> 
      </ul>
 
