--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -90,7 +90,7 @@
        
     <h3>8. 統計的推定と仮説検定の基礎</h3>
     <ul>
-        <!-- <li><a href="slides/stat2-slides-08.pdf">講義スライド</a></li> -->
+        <li><a href="slides/stat2-slides-08.pdf">講義スライド</a></li>
         <li><a href="R/introduction-to-inference.html">統計的推定と仮説検定の基礎</a></li>
     </ul>
  
