update econom2 and stat2

--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -69,24 +69,24 @@
         <li><a href="R/data-handling.html">Rによるデータの扱い</a></li>
      </ul>
    
-   <h3>4. 単回帰分析 (1) </h3>
+   <h3>4-5. 単回帰分析</h3>
      <ul>
        <li> <a href="slides/applied-econometrics-slides-04.pdf">講義スライド</a></li>
        <li><a href="R/linear-regression-1.html">単回帰分析 I</a></li> 
-     </ul>
-     
-   <h3>5. 単回帰分析 (2) </h3>
-     <ul>
-       <!-- <li> <a href="slides/applied-econometrics-slides-05.pdf">講義スライド</a></li> -->
        <li><a href="R/linear-regression-simulation1.html">単回帰分析のシミュレーション</a></li> 
        <li><a href="R/econom2-assignment02.html">課題2</a>（<b>締切：2019年5月9日の授業開始時</b>）</li>
      </ul>
      
-  <h3>6. 重回帰分析 (1) </h3>
+  <h3>6-7. 重回帰分析</h3>
      <ul>
        <li> <a href="slides/applied-econometrics-slides-06.pdf">講義スライド</a></li>
        <li><a href="R/omitted-variable-bias.html">欠落変数バイアスのシミュレーション</a></li> 
      </ul>
+  
+  <h3>8. 回帰分析結果の提示法</h3>
+    <ul>
+      <li><a href="R/econom2-assignment03.html">課題3</a>（<b>締切：2019年5月23日の授業開始時</b>）</li>
+    </ul>
 
  <!--     
     <h3>4. 因果推論入門</h3>
