--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -93,13 +93,14 @@
         <li><a href="slides/stat2-slides-08.pdf">講義スライド</a></li>
         <li><a href="R/introduction-to-inference.html">統計的推定と仮説検定の基礎</a></li>
     </ul>
- 
-  <!--    
-    <h3>6. 乱数生成と中心極限定理</h3>
+   
+    <h3>9. 乱数生成と中心極限定理</h3>
     <ul>
-       <li><a href="slides/stat2-slides-06.pdf">講義スライド</a></li>
+      <!-- <li><a href="slides/stat2-slides-06.pdf">講義スライド</a></li> -->
       <li><a href="R/rng-n-clt.html">乱数生成と中心極限定理</a></li>
     </ul>
+
+ <!--   
     
     <h3>7. 母集団と標本</h3>
     <ul>
