--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -85,6 +85,7 @@
   
   <h3>8. 回帰分析結果の提示法</h3>
     <ul>
+      <li><a href="R/linear-regression-4.html">回帰分析の結果の提示</a></li> 
       <li><a href="R/econom2-assignment03.html">課題3</a>（<b>締切：2019年5月23日の授業開始時</b>）</li>
     </ul>
 
