--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -92,7 +92,7 @@
     
   <h3>9. 操作変数法</h3>
     <ul>
-      <!--<li> <a href="slides/applied-econometrics-slides-09.pdf">講義スライド</a></li> -->
+      <li> <a href="slides/applied-econometrics-slides-09.pdf">講義スライド</a></li>
       <li><a href="R/IV-method.html">操作変数法</a></li>
     </ul>
 
