--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -90,11 +90,19 @@
       <li><a href="R/econom2-assignment03.html">課題3</a>（<b>締切：2019年5月23日の授業開始時</b>）</li>
     </ul>
     
-  <h3>9. 操作変数法</h3>
+  <h3>9. 操作変数法 (1)</h3>
     <ul>
       <li> <a href="slides/applied-econometrics-slides-09.pdf">講義スライド</a></li>
       <li><a href="R/IV-method.html">操作変数法</a></li>
     </ul>
+
+  <h3>10. 操作変数法 (2)</h3>
+    <ul>
+      <!-- <li> <a href="slides/applied-econometrics-slides-10.pdf">講義スライド</a></li>-->
+      <li><a href="R/IV.html">?????</a></li>
+      <li><a href="R/econom2-assignment04.html">課題4</a>（<b>締切：2019年6月6日の授業開始時</b>）</li>
+    </ul>
+
 
  <!--     
     <h3>4. 因果推論入門</h3>
