--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -161,8 +161,8 @@
   <h3>課題の解答例</h3>
     <ul>
       <li><a href="R/stat2-hw03-solutions.html">課題3の解答例</a></li>
-      <!--<li><a href="R/stat2-hw04-solutions.html">課題4の解答例</a></li>
-      <li><a href="R/stat2-hw05-solutions.html">課題5の解答例</a></li> -->
+      <li><a href="R/stat2-hw04-solutions.html">課題4の解答例</a></li>
+      <!-- <li><a href="R/stat2-hw05-solutions.html">課題5の解答例</a></li> -->
       <li><a href="R/stat2-hw06-solutions.html">課題6の解答例</a></li> 
     </ul>
     
