--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -102,6 +102,13 @@
       <li><a href="R/econom2-assignment04.html">課題4</a>（<b>締切：2019年6月6日の授業開始時</b>）</li>
     </ul>
 
+  <h3>11. マッチング</h3>
+    <ul>
+      <!--<li> <a href="slides/applied-econometrics-slides-14.pdf">講義スライド</a></li>-->
+      <li><a href="R/matching.html">マッチング</a></li>
+    </ul>
+
+
 
  <!--     
     <h3>4. 因果推論入門</h3>
