--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -104,10 +104,15 @@
 
   <h3>11-12. マッチング</h3>
     <ul>
-      <li> <a href="slides/applied-econometrics-slides-14.pdf">講義スライド</a></li>
+      <li> <a href="slides/applied-econometrics-slides-11.pdf">講義スライド</a></li>
       <li><a href="R/matching.html">マッチング</a></li>
     </ul>
-
+    
+  <h3>13. 交差項の利用と<i>F</i> 検定</h3>
+    <ul>
+      <!--<li> <a href="slides/applied-econometrics-slides-13.pdf">講義スライド</a></li>-->
+      <li><a href="R/regression-interaction.html">回帰分析における交差項の利用と複合仮説の検定</a></li>
+    </ul>
 
 
  <!--     
