--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -83,7 +83,7 @@
 
     <h3>6-7. ggplot2 を使ったデータの可視化</h3>
     <ul>
-        <li><a href="slides/stat2-slides-06。pdf">講義スライド</a></li>
+        <li><a href="slides/stat2-slides-06.pdf">講義スライド</a></li>
         <li><a href="R/intro-to-ggplot2.html">ggplot2入門</a> </li>
         <li><a href="slides/stat2-2019-assignment3.pdf">課題3</a>（<b>提出期限：5月16日の授業開始時</b>）</li>
     </ul>
@@ -162,7 +162,7 @@
     <ul>
       <li><a href="R/stat2-hw03-solutions.html">課題3の解答例</a></li>
       <li><a href="R/stat2-hw04-solutions.html">課題4の解答例</a></li>
-      <!-- <li><a href="R/stat2-hw05-solutions.html">課題5の解答例</a></li> -->
+      <li><a href="R/stat2-hw05-solutions.html">課題5の解答例</a></li>
       <li><a href="R/stat2-hw06-solutions.html">課題6の解答例</a></li> 
     </ul>
     
