--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -127,7 +127,7 @@
     
     <h3>14. 平均値の比較</h3>
     <ul>
-      <li><a href="slides/stat2-slides-14.pdf">講義スライド</a></li>
+      <li><a href="slides/stat2-slides-14.pdf">講義スライド</a>（改訂: 2019-06-03）</li>
       <li><a href="R/mean-comparison.html">統計的検定と平均値の比較</a></li>
     </ul>
     
