--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <a class="white-red" href="/resources/" target="_top">resources</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://www.yukiyanai.com/" target="_top">日本語</a>
+  <a class="white-red fltrt" href="/jp/" target="_top">日本語</a>
   </p>
   <!-- end .header --></div>
   <!-- InstanceBeginEditable name="content" -->
