--- a/research/abstracts/elections-in-crises.html
+++ b/research/abstracts/elections-in-crises.html
@@ -28,7 +28,7 @@
   <a class="white-red" href="/resources/">resources</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://www.yukiyanai.com/">日本語</a>
+  <a class="white-red fltrt" href="/jp/">日本語</a>
   </p>
   <!-- end .header --></div>
   <!-- InstanceBeginEditable name="content" -->
