--- a/teaching/rm3/index.html
+++ b/teaching/rm3/index.html
@@ -25,7 +25,7 @@
   <a class="white-red" href="/resources/">resources</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://www.yukiyanai.com/">日本語</a>
+  <a class="white-red fltrt" href="/jp/">日本語</a>
   </p>
   <!-- end .header --></div>
   <!-- InstanceBeginEditable name="content" -->
