--- a/jp/classes/econometrics1/index.html
+++ b/jp/classes/econometrics1/index.html
@@ -37,11 +37,11 @@
   <div class="content">
   <h2>計量経済学</h2>
   
-    <p>2018年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
+    <p>2019年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
     
   
 
-  <h4><a class="black" href="docs/syllabus-econometrics_2018-3Q.pdf">シラバス</a></h4>
+  <h4><a class="black" href="docs/syllabus-econometrics_2019-3Q.pdf">シラバス</a></h4>
   
   <br>
   
@@ -57,7 +57,7 @@
   <h4>教科書</h4>
   
   <ul>
-    <li>今井耕介.（粕谷, 原田, 久保 訳） 2018.『<a href="https://www.iwanami.co.jp/book/b352348.html" target="_blank">社会科学のためのデータ分析入門　上</a>』岩波書店.</li>
+    <li>浅野正彦, 矢内勇生. 2018『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』オーム社.</li>
   </ul>
   
       <!-- end .content -->
