--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -37,21 +37,22 @@
   <div class="content">
       <h2>授業</h2>
   
-  <h3>今学期（2019年度前期）の授業</h3>
+  <h3>今学期（2019年度後期）の授業</h3>
   <h4>高知工科大学</h4>
   <ul>
-    <li><a href="stat2/">統計学 2</a></li>
-    <li><a href="econometrics2/">計量経済学応用</a></li>
-  </ul>
+     <li><a href="econometrics1/">計量経済学</a></li>
+     <li><a href="info3">情報科学3</a></li>
+   </ul>
    
 
   <h3>過去の授業</h3>
   
   <h4>高知工科大学</h4>
   <ul>
-     <li><a href="econometrics1/">計量経済学</a></li>
-     <li><a href="info3">情報科学3</a></li>
-   </ul>
+    <li><a href="stat2/">統計学 2</a></li>
+    <li><a href="econometrics2/">計量経済学応用</a></li>
+  </ul>
+ 
   
   <h4>他大学</h4>
   <ul>
