--- a/jp/classes/info3/python/install-python3.html
+++ b/jp/classes/info3/python/install-python3.html
@@ -12,7 +12,7 @@
   <![endif]-->
 </head>
 <body>
-<h1 id="python-3.7.0-をwindowsにインストールする">Python 3.7.0 をWindowsにインストールする</h1>
+<h1 id="python-3.7.0-をwindowsにインストールする">Python 3.7.x をWindowsにインストールする</h1>
 <h2 id="anaconda-をインストールする">Anaconda をインストールする</h2>
 <ol style="list-style-type: decimal">
 <li><a href="https://www.anaconda.com">Anacondaのウェブサイト</a> を開く</li>
