update syllabus for econometrics

--- a/jp/classes/econometrics1/index.html
+++ b/jp/classes/econometrics1/index.html
@@ -41,7 +41,7 @@
     
   
 
-  <h4><a class="black" href="docs/syllabus-econometrics_2019-3Q.pdf">シラバス</a></h4>
+  <h4><a class="black" href="docs/syllabus-econometrics_2019-3Q.pdf">シラバス（改訂：2019-10-03）</a></h4>
   
   <br>
   
