--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -46,7 +46,7 @@
     
     <h3>1. イントロダクション</h3>
     <ul>
-      <!-- <li><a href="slides/econometrics-slides-01.pdf">講義スライド (PDF)</a></li> -->
+      <li><a href="slides/econometrics-slides-01.pdf">講義スライド (PDF)</a></li>
       <li><a href="http://yukiyanai.github.io/jp/classes/stat2/contents/R/installing-R.html" target="_blank">RとRStudioのインストール</a></li>
     </ul>
  
