--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -52,7 +52,7 @@
     
     <h3>2. RとRStudioの基本操作（復習）</h3>
     <ul>
-      <a href="http://yukiyanai.github.io/jp/classes/stat2/contents/" target="_blank">統計学2のページ</a>を参照
+      <li><a href="http://yukiyanai.github.io/jp/classes/stat2/contents/" target="_blank">統計学2のページ</a>を参照</li>
     </ul>
     
     <h3>3. 二変数の関係</h3>
