--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -57,6 +57,7 @@
     
     <h3>3. 二変数の関係</h3>
     <ul>
+      <li><a href="slides/econometrics-slides-03.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/bivariate-analysis.html">二変数の関係</a></li>
     </ul>
    
