--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -60,6 +60,12 @@
       <li><a href="slides/econometrics-slides-03.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/bivariate-analysis.html">二変数の関係</a></li>
     </ul>
+    
+    <h3>4. 回帰分析の基礎</h3>
+    <ul>
+      <!--<li><a href="slides/econometrics-slides-04.pdf">講義スライド (PDF)</a></li>-->
+      <li><a href="R/regression-intro.html">回帰分析の基礎</a></li>
+    </ul>
    
     
 
