--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -63,7 +63,7 @@
     
     <h3>4. 回帰分析の基礎</h3>
     <ul>
-      <!--<li><a href="slides/econometrics-slides-04.pdf">講義スライド (PDF)</a></li>-->
+      <li><a href="slides/econometrics-slides-04.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/regression-intro.html">回帰分析の基礎</a></li>
       <li><a href="assignments/econometrics-2019-hw01.html">課題1</a>（<b>提出期限：10月24日の授業開始時</b>）</li>
     </ul>
