--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -67,6 +67,11 @@
       <li><a href="R/regression-intro.html">回帰分析の基礎</a></li>
       <li><a href="assignments/econometrics-2019-hw01.html">課題1</a>（<b>提出期限：10月24日の授業開始時</b>）</li>
     </ul>
+    
+    <h3>5. 因果推論 I</h3>
+    <ul>
+      <li><a href="slides/econometrics-slides-05.pdf">講義スライド (PDF)</a></li>
+    </ul>
    
     
 
