--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -72,6 +72,12 @@
     <ul>
       <li><a href="slides/econometrics-slides-05.pdf">講義スライド (PDF)</a></li>
     </ul>
+    
+    <h3>6. 因果推論 II</h3>
+    <ul>
+      <li><a href="slides/econometrics-slides-06.pdf">講義スライド (PDF)</a></li>
+      <li><a href="assignments/econometrics-2019-hw02.html">課題2</a>（<b>提出期限：10月31日の授業開始時</b>）</li>
+    </ul>
    
     
 
