--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -78,6 +78,13 @@
       <li><a href="slides/econometrics-slides-06.pdf">講義スライド (PDF)</a></li>
       <li><a href="assignments/econometrics-2019-hw02.html">課題2</a>（<b>提出期限：10月31日の授業開始時</b>）</li>
     </ul>
+    
+    <h3>7. データの収集・クリーニング</h3>
+    <ul>
+      <!--<li><a href="slides/econometrics-slides-07.pdf">講義スライド (PDF)</a></li>-->
+      <li><a href="R/data-handling.html">Rによるデータ操作</a></li>
+    </ul>
+
    
     
 
