--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -81,7 +81,7 @@
     
     <h3>7. データの収集・クリーニング</h3>
     <ul>
-      <!--<li><a href="slides/econometrics-slides-07.pdf">講義スライド (PDF)</a></li>-->
+      <li><a href="slides/econometrics-slides-07.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/data-handling.html">Rによるデータ操作</a></li>
     </ul>
 
