--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -84,6 +84,11 @@
       <li><a href="slides/econometrics-slides-07.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/data-handling.html">Rによるデータ操作</a></li>
     </ul>
+    
+    <h3>8. 回帰分析による統計的推測 I: 仮説を立てる</h3>
+    <ul>
+      <li><a href="slides/econometrics-slides-08.pdf">講義スライド (PDF)</a></li>
+    </ul>
 
    
     
