--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -100,6 +100,7 @@
     <ul>
       <!--<li><a href="slides/econometrics-slides-10.pdf">講義スライド (PDF)</a></li> -->
       <li><a href="R/multiple-regression.html">回帰分析の応用 (1)</a></li>
+      <li><a href="assignments/econometrics-2019-hw03.html">課題3</a>（<b>提出期限：11月18日の授業開始時</b>）</li>
     </ul>
     
     
