--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -90,15 +90,15 @@
       <li><a href="slides/econometrics-slides-08.pdf">講義スライド (PDF)</a></li>
     </ul>
     
-    <h3>9. 回帰分析による統計的推測 II: 仮説の検証と効果の推定</h3>
+    <h3>9-10. 回帰分析による統計的推測 II: 仮説の検証と効果の推定</h3>
     <ul>
       <li><a href="slides/econometrics-slides-09.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/regression-estimation.html">回帰分析による統計的推定</a></li>
     </ul>
     
-     <h3>10. 回帰分析の応用</h3>
+     <h3>11. 回帰分析の応用</h3>
     <ul>
-      <!--<li><a href="slides/econometrics-slides-10.pdf">講義スライド (PDF)</a></li> -->
+      <li><a href="slides/econometrics-slides-11.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/multiple-regression.html">回帰分析の応用 (1)</a></li>
       <li><a href="assignments/econometrics-2019-hw03.html">課題3</a>（<b>提出期限：11月18日の授業開始時</b>）</li>
     </ul>
