--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -105,7 +105,7 @@
     
     <h3>12. 回帰分析の応用 II</h3>
     <ul>
-      <!-- <li><a href="slides/econometrics-slides-12.pdf">講義スライド (PDF)</a></li>-->
+      <li><a href="slides/econometrics-slides-12.pdf">講義スライド (PDF)</a></li>
       <li><a href="R/linear-regression.html">回帰分析の応用 (2)</a></li>
     </ul>
     
