--- a/jp/classes/econometrics1/contents/index.html
+++ b/jp/classes/econometrics1/contents/index.html
@@ -115,7 +115,7 @@
       <li><a href="R/interaction.html">交差項の利用</a></li>
     </ul> 
     
-    <h3>14. データの可視化
+    <h3>14. データの可視化</h3>
     <ul>
       <li><a href="R/visualization-tips.html">データ可視化のTips</a></li>
     </ul>
