update for ay2020

--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -37,27 +37,27 @@
   <div class="content">
   <h2>計量経済学応用</h2>
   
-    <p>2019年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
+    <p>2020年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
     
   
 
-  <h4><a class="black" href="docs/syllabus-applied-econometrics_2019-1Q.pdf">シラバス</a></h4>
+  <h4><a class="black" href="docs/syllabus-applied-econometrics_2020-1Q.pdf">シラバス</a></h4>
 
      <br>
   
   <h3>授業の目的と到達目標</h3>
-    <p>経済学（ならびにマネジメント、政治学等の社会科学)における理論・仮説を量的なデータ(数字で 表されるデータ)を用いて検証する方法を習得する。まず、自らの研究上の疑問に答えるために必要な データを見つけ出し、それを分析可能な形式に変換する方法を身につける。その上で、どのような方法 を使って収集したデータを分析すれば、研究上の疑問に答えることができるかを理解する。最後に、論 文執筆や研究発表の際に分析結果を効果的に伝達することができるようにする。
-</p>
+    <p>経済学（ならびにマネジメント、政治学などの社会科学）における理論・仮説を量的データを用いて検証する方法を習得する。今年度は、特に因果効果 (causal effects) を推定する方法について学ぶ。自らの研究上の疑問に答えるために因果効果に関する仮説を立て、その仮説を統計的因果推論の方法を用いて検証できるようになることを目指す。</p>
     <br>
-  
-  <h3><a href="contents/">授業の内容</a></h3>
+    
+  <h3>授業の内容（準備中）</h3>  
+  <!-- <h3><a href="contents/">授業の内容</a></h3> -->
     <br>
  
    
   <h4>教科書</h4>
   
   <ul>
-    <li> 田中隆一. 2015.『<a href="http://www.yuhikaku.co.jp/static/studia_ws/index.html" target="_blank">計量経済学の第一歩：実証分析のススメ</a>』有斐閣.</li>
+    <li>安井翔太. 2020.『<a href="https://gihyo.jp/book/2020/978-4-297-11117-5" target="_blank">効果検証入門：正しい比較のための因果推論/計量経済学の基礎</a>』技術評論社.</li>
   </ul>
   
 
@@ -77,7 +77,7 @@
     </tr>
     <tr>
       <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2019 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
   <!-- end .footer --> </div>
