--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -40,17 +40,17 @@
     <p>2019年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
     
   
-
-  <h4><a class="black" href="docs/syllabus-stat2_2019-1Q.pdf">シラバス（改訂：2019-05-10; 2019-05-15）</a></h4>
+  <h4>シラバス（準備中）</h4>
+  <!-- <h4><a class="black" href="docs/syllabus-stat2_2020-1Q.pdf">シラバス</a></h4> -->
 
      <br>
   
   <h3>授業の目的と到達目標</h3>
-    <p>現代社会にあふれるデータを適切に理解・処理する能力（統計リテラシー）を身につけ、社会を批判的に観察できる目を養うことがこの授業の目的である。統計のウソにだまされないだけでなく、自らも意図せざるウソをつかず、統計を適切に利用・提示できるようになることを目標とする。
-</p>
+    <p>現代社会にあふれるデータを適切に理解・処理する能力（統計リテラシー）を身につけ、社会を批判的に観察できる目を養うことがこの授業の目的である。統計のウソにだまされないだけでなく、自らも意図せざるウソをつかず、統計を適切に利用・提示できるようになることを目標とする。</p>
     <br>
   
-  <h3><a href="contents/">授業の内容</a></h3>
+  <hr>授業の内容（準備中）</h3>
+  <!--<h3><a href="contents/">授業の内容</a></h3>-->
     <br>
  
    
@@ -77,7 +77,7 @@
     </tr>
     <tr>
       <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2019 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
   <!-- end .footer --> </div>
