--- a/cv/index.html
+++ b/cv/index.html
@@ -69,14 +69,15 @@
   <h3>Grants and Awards</h3>
   <ul>
     <li> Japan Society for the Promotion of Science, Grant-in-Aid for Scientific Research (KAKEN):
-        No. 22830099 (2010-2012); No. 25780102 (2013-2016); No. 16K17051 (2016-2019).
+        Nos. 22830099 (2010-2012), 25780102 (2013-2016), 16K17051 (2016-2019), 19K21682 (2019-2022), and 19H01447 (2019-2023).
     </li>
+    <li>Walter Beach Award, Southern Political Science Association (2018)</li>
     <li> Waseda University Grant for Special Research Projects: 2010A-841, 2011A-026, 2012A-025, and 2012B-062 (2010, 2011, 2012)</li>
     <li>Prestage-Cook Award, Southern Political Science Association (2012)</li>
     <li>George and Sakaye Aratani Fellowship, Paul I. and Hisako Terasaki Center for Japanese Studies, UCLA (2009)</li>
     <li>Research Grant, Institute for Research on Labor and Employment, UCLA (2009)</li>
-    <li>Ishizaka Foundation Scholarship (2006-2008)</li.
-  ></ul>
+    <li>Ishizaka Foundation Scholarship (2006-2008)</li>
+  </ul>
   <!-- end .content -->
   </div>
   <!-- InstanceEndEditable -->
@@ -90,7 +91,7 @@
     </tr>
     <tr>
       <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2019 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
   </table>
   <!-- end .footer --></div>
