--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -36,30 +36,30 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
   <h2>統計学 2</h2>
-  
+
     <p>2019年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
-    
-  
+
+
   <h4>シラバス（準備中）</h4>
   <!-- <h4><a class="black" href="docs/syllabus-stat2_2020-1Q.pdf">シラバス</a></h4> -->
 
      <br>
-  
+
   <h3>授業の目的と到達目標</h3>
     <p>現代社会にあふれるデータを適切に理解・処理する能力（統計リテラシー）を身につけ、社会を批判的に観察できる目を養うことがこの授業の目的である。統計のウソにだまされないだけでなく、自らも意図せざるウソをつかず、統計を適切に利用・提示できるようになることを目標とする。</p>
     <br>
-  
-  <hr>授業の内容（準備中）</h3>
+
+  <h3>授業の内容（準備中）</h3>
   <!--<h3><a href="contents/">授業の内容</a></h3>-->
     <br>
- 
-   
+
+
   <h4>教科書</h4>
-  
+
   <ul>
     <li> 浅野正彦, 矢内勇生. 2018.『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』オーム社.</li>
   </ul>
-  
+
 
 
       <!-- end .content -->
