fix broken links

--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -15,7 +15,7 @@
   <h1>矢内　勇生（Yuki YANAI）</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
+  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -36,14 +36,14 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
       <h2>授業</h2>
-  
+
   <h3>今学期（2020年度前期）の授業</h3>
   <h4>高知工科大学</h4>
   <ul>
     <li><a href="stat2/">統計学 2</a></li>
     <li><a href="econometrics2/">計量経済学応用</a></li>
   </ul>
-   
+
 
   <h3>過去の授業</h3>
 
@@ -52,8 +52,8 @@
      <li><a href="econometrics1/">計量経済学</a></li>
      <li><a href="info3">情報科学3</a></li>
    </ul>
-   
-  
+
+
   <h4>他大学</h4>
   <ul>
     <li><a href="kobe-cp/">比較政治学 B</a> [2017年夏期集中, 2018年夏期集中, 神戸大学 法学部]</li>
