--- a/jp/classes/info3/index.html
+++ b/jp/classes/info3/index.html
@@ -15,7 +15,7 @@
   <h1>矢内　勇生（Yuki YANAI）</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
+  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -36,37 +36,37 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
   <h2>情報科学 3</h2>
-  
+
     <p>2019年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
-    
-  
+
+
 
   <h4><a class="black" href="docs/syllabus-infoscience3_2019-3Q.pdf">シラバス（PDF; 要パスワード）</a></h4>
-  
+
   <br>
-  
+
   <h3>Pythonのインストール</h3>
   <ul>
     <li><a href="python/install-python3.html" target="_blank">Windowsにインストールする方法</a></li>
   </ul>
-  
-    
+
+
   <h3>授業に役立つリンク</h3>
   <ul>
     <li><a href="https://py3.codeskulptor.org/" target="_blank">CodeSkulptor3</a>（ウェブ上でPython 3プログラムを実行できる）</li>
     <li>Dive into Python 3（<a href="http://www.diveintopython3.net/" target="_blank">英語版</a>; <a href="http://diveintopython3-ja.rdy.jp/" target="_blank">日本語版</a>）</li>
     <li><a href="https://scratch-howto.com/" target="_blank">スクラッチプログラミング入門</a></li>
   </ul>
-  
+
   <br>
- 
-   
+
+
   <h4>教科書</h4>
-  
+
   <ul>
     <li>辻真吾. 2018.『<a href="https://gihyo.jp/book/2018/978-4-7741-9643-5" target="_blank">Pythonスタートブック [増補改訂版]</a>』技術評論社.</li>
   </ul>
-  
+
       <!-- end .content -->
   </div>
   <!-- InstanceEndEditable -->
