--- a/jp/classes/rm1/index.html
+++ b/jp/classes/rm1/index.html
@@ -15,7 +15,7 @@
   <h1>矢内　勇生（Yuki YANAI）</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
+  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -36,29 +36,29 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
   <h2>政治学方法論 I (Research Methods in Political Science I)</h2>
-  
+
     <p>2016年度前期 神戸大学法学部・法学研究科</p>
-    
-  
+
+
 
   <h4><a class="black" href="docs/syllabus-rm1-2016spring.pdf">シラバス</a></h4>
 
      <br>
-  
+
   <h3>授業の目的と到達目標</h3>
     <p>政治学における理論・仮説を量的なデータ（数字で表されるデータ）を用いて検証する方法を習得する。まず、自らの研究上の疑問に答えるために必要なデータを見つけ出し、それを分析可能な形式に変換する方法を身につける。その上で、どのような方法を使って収集したデータを分析すれば、研究上の疑問に答えることができるかを理解する。最後に、論文執筆や研究発表の際に分析結果を効果的に伝達することができるようにする。</p>
     <br>
-  
+
   <h3><a href="contents/">授業の内容</a></h3>
     <br>
- 
-   
+
+
   <h4>教科書</h4>
-  
+
   <ul>
     <li>浅野正彦, 矢内勇生. 2013.『Stataによる計量政治学』オーム社. <a href="/jp/quant-methods-stata/">この本のページ</a></li>
   </ul>
-  
+
 
 
       <!-- end .content -->
