--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -15,7 +15,7 @@
   <h1>矢内　勇生（Yuki YANAI）</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
+  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
