--- a/jp/cv/index.html
+++ b/jp/cv/index.html
@@ -15,7 +15,7 @@
   <h1>矢内　勇生（Yuki YANAI）</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
+  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="current" href="/jp/cv/">略歴	</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -36,7 +36,7 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
   <h2>略歴</h2>
-  
+
   <table>
     <tr>
       <td align="left">&nbsp;&nbsp;2001年 3月</td>
@@ -107,7 +107,7 @@
       <td align="left"></td>
       <td align="center">現在に至る</td>
       <td align="left"></td>
-    </tr> 
+    </tr>
   </table>
       <!-- end .content -->
   </div>
