--- a/jp/publications/abstracts/governance-with-a-twist.html
+++ b/jp/publications/abstracts/governance-with-a-twist.html
@@ -15,7 +15,7 @@
   <h1>矢内　勇生（Yuki YANAI）</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
+  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -40,8 +40,8 @@
   <a class="black" href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> and <a class="black" href="http://www.yukiyanai.com/" target="_blank">Yuki Yanai</a><br><br>
 Pekkanen, Robert, Steven R. Reed, and Ethan Scheiner (eds.) 2013. <a class="booktitle" href="http://www.palgrave.com/page/detail/japan-decides-2012-robert-pekkanen/?K=9781137348517" target="_blank">Japan Decides 2012: The Japanese General Election</a>. London and New York: Palgrave Macmillan, pp.225-244.<br><br>
   </p>
-  
-  
+
+
   <h4>要旨</h4>
 <p>議会制民主主義国家では執政府が立法府に責を負っており、執政府と立法府が対立する分割政府になることはない。しかし、二院制を採用している場合、下院と上院で支配会派が異なる「分割議会（ねじれ国会）」を経験する可能性がある。内閣の存続は立法活動を効果的に行えるかどうかにかかっているので、分割議会は大統領制における分割政府以上に大きな影響を政権運営に対して及ぼすと考えられる。</p>
 <p>そこで 本稿は、日本の国会を対象とし、ねじれ国会が立法活動と政権運営に与える影響を分析する。ねじれ国会のせいで国会の立法活動が停滞し、政策を効果的に実施できないために頻繁な首相の交代が起こると論じられているが、この主張は正しいのだろうか。</p>
