--- a/jp/classes/econometrics1/index.html
+++ b/jp/classes/econometrics1/index.html
@@ -15,7 +15,7 @@
   <h1>矢内　勇生（Yuki YANAI）</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
+  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -36,30 +36,30 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
   <h2>計量経済学</h2>
-  
+
     <p>2019年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
-    
-  
+
+
 
   <h4><a class="black" href="docs/syllabus-econometrics_2019-3Q.pdf">シラバス（改訂：2019-10-03, 2019-11-14）</a></h4>
-  
+
   <br>
-  
+
   <h3>授業の目的と到達目標</h3>
     <p>経済学（ならびにマネジメントや政治学等の社会科学)における理論・仮説を量的なデータ(数字で 表されるデータ)を用いて検証する方法を習得する。まず、自らの研究上の疑問に答えるために必要な データを見つけ出し、それを分析可能な形式に変換する方法を身につける。その上で、どのような方法 を使って収集したデータを分析すれば、研究上の疑問に答えることができるかを理解する。最後に、論 文執筆や研究発表の際に分析結果を効果的に伝達することができるようにする。
 </p>
   <br>
-  
+
   <h3><a href="contents/">授業の内容</a></h3>
   <br>
- 
-   
+
+
   <h4>教科書</h4>
-  
+
   <ul>
     <li>浅野正彦, 矢内勇生. 2018『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』オーム社.</li>
   </ul>
-  
+
       <!-- end .content -->
   </div>
   <!-- InstanceEndEditable -->
