--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -15,7 +15,7 @@
   <h1>矢内　勇生（Yuki YANAI）</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
+  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -36,30 +36,30 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
   <h2>計量経済学応用</h2>
-  
+
     <p>2020年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
-    
-  
+
+
 
   <h4><a class="black" href="docs/syllabus-applied-econometrics_2020-1Q.pdf">シラバス</a></h4>
 
      <br>
-  
+
   <h3>授業の目的と到達目標</h3>
     <p>経済学（ならびにマネジメント、政治学などの社会科学）における理論・仮説を量的データを用いて検証する方法を習得する。今年度は、特に因果効果 (causal effects) を推定する方法について学ぶ。自らの研究上の疑問に答えるために因果効果に関する仮説を立て、その仮説を統計的因果推論の方法を用いて検証できるようになることを目指す。</p>
     <br>
-    
-  <h3>授業の内容（準備中）</h3>  
+
+  <h3>授業の内容（準備中）</h3>
   <!-- <h3><a href="contents/">授業の内容</a></h3> -->
     <br>
- 
-   
+
+
   <h4>教科書</h4>
-  
+
   <ul>
     <li>安井翔太. 2020.『<a href="https://gihyo.jp/book/2020/978-4-297-11117-5" target="_blank">効果検証入門：正しい比較のための因果推論/計量経済学の基礎</a>』技術評論社.</li>
   </ul>
-  
+
 
 
       <!-- end .content -->
