--- a/jp/classes/kobe-cp/index.html
+++ b/jp/classes/kobe-cp/index.html
@@ -15,7 +15,7 @@
   <h1>矢内　勇生（Yuki YANAI）</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
+  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -36,30 +36,30 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
   <h2>比較政治学 B (Comparative Politics B)</h2>
-  
+
     <p>2018年度夏期集中 神戸大学法学部・法学研究科</p>
-    
-  
+
+
 
   <h4><a class="black" href="docs/syllabus-cp-B-2018.pdf">シラバス</a> (2018-09-15 改訂)</h4>
 
      <br>
-  
+
   <h3>授業の概要</h3>
     <p>この授業では、比較政治学における理論・仮説をデータを用いて検証する方法を習得する。まず、自らの研究上の疑問に答えるために必要なデータを見つけ出し、それを分析可能な形式に変換する方法を身につける。その上で、どのような方法を使って収集したデータを分析すれば、研究上の疑問に答えることができるかを理解する。最後に、論文執筆や研究発表の際に分析結果を効果的に伝達することができるようにする。</p>
     <br>
-  
+
   <h3><a href="contents/">授業の内容</a></h3>
     <br>
- 
-   
+
+
   <h4>教科書</h4>
-  
+
   <ul>
     <li>Imai, Kosuke. 2017. <a href="https://press.princeton.edu/titles/11025.html" target="_blank"><i>Quantitative Social Science: An Introduction</i></a>. Princeton and Oxford: Princeton UP.</li>
     <li>今井耕介.（粕谷, 原田, 久保 訳） 2018.『<a href="https://www.iwanami.co.jp/book/b352348.html" target="_blank">社会科学のためのデータ分析入門　上</a>』岩波書店.
   </ul>
-  
+
 
 
       <!-- end .content -->
