--- a/jp/classes/pp1/index.html
+++ b/jp/classes/pp1/index.html
@@ -15,7 +15,7 @@
   <h1>矢内　勇生（Yuki YANAI）</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
+  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -36,17 +36,17 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
     <h2>政治過程論 I</h2>
-  
+
     <p>2015年度前期 甲南大学法学部</p>
-    
-  
+
+
   <h4><a class="black" href="docs/syllabus-process-konan2015.pdf">
   シラバス</a></h4>
      <br>
-  
-  
+
+
   <h3>授業の目的と到達目標</h3>
- 
+
     <p>この授業の目的と到達目標は以下のとおりである。</p>
     <ul>
      <li>1. 政治過程論で使われる基本的な専門用語や基礎となる理論を理解する。</li>
@@ -56,26 +56,26 @@
      <li>5. 現実の政治現象に対して「政治過程論的な」疑問をもち、批判的に検討する力を身に付ける。
 </li>
     </ul>
- 
+
 
   <h3>授業の内容</h3>
-  
+
   <p>日本は民主制の国家であり、私たち一人ひとりが主権者である。つまり、政治的決定権はそれぞれの「私」が握っているはずである。では、私たちの思い通りに「政治」は動いているのだろうか。もし私たちの思い通りでないのなら、誰がどのように「政治」を動かしているのだろうか。また、主権者であるはずの私たちの意思が反映されない(ように見える)とすれば、それはなぜだろうか。</p>
   <p>この授業では、政治過程論の基礎を学び、これらの疑問に答える力を身に付ける。科学としての政治学 (political science) の方法に依拠し、日本だけでなく、世界の民主諸国の政治過程についても説明ができるような一般性の高い理論を学ぶ。</p>
 
    <p>詳細は、シラバスに記載の通り。</p>
    <!-- <p><a href="contents/">授業で使用したスライド</a></p> -->
     <br>
-  
+
   <h4>教科書</h4>
     <ul>
       <li>伊藤光利, 田中愛治, 真渕勝. 2000.『政治過程論』有斐閣.</li>
       <li>建林正彦, 曽我謙悟, 待鳥聡史. 2008.『比較政治制度論』有斐閣.</li>
     </ul>
-  
+
   <h4>主な参考書</h4>
     <ul>
-      <li>浅野正彦, 矢内勇生. 2013.『<a href="http://www2.kobe-u.ac.jp/jp/quant-methods-stata/", target="_blank">Stataによる計量政治学</a>』オーム社.</li>      
+      <li>浅野正彦, 矢内勇生. 2013.『<a href="http://www2.kobe-u.ac.jp/jp/quant-methods-stata/", target="_blank">Stataによる計量政治学</a>』オーム社.</li>
       <li>川人貞史, 吉野孝, 平野浩, 加藤淳子. 2011.『現代の政党と選挙 新版』有斐閣.</li>
       <li>久米郁男, 川出良枝, 古城佳子, 田中愛治, 真渕勝. 2011.『政治学 補訂版』有斐閣.</li>
       <li>平野浩, 河野勝（編）. 2011.『新版 アクセス日本政治論』日本経済評論社.</li>
