--- a/jp/publications/abstracts/elections-in-crises.html
+++ b/jp/publications/abstracts/elections-in-crises.html
@@ -15,7 +15,7 @@
   <h1>矢内　勇生（Yuki YANAI）</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
+  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -41,8 +41,8 @@
   <br><br>
  Magara, Hideko (ed) 2014. <a class="booktitle" href="http://www.e-elgar.co.uk/bookentry_main.lasso?id=15547/" target="_blank">Economic Crises and Policy Regime: The Dynamics of Policy Innovation and Paradigmatic Change</a>: Cheltenham: Edward Elgar, pp.263-279.<br>
  <br></p>
-  
-  
+
+
   <h4>要旨</h4>
   <p>金融危機の下で実施された2010年の英国総選挙では、労働党が敗れ、保守党と自由民主党の連立政権が誕生した。本稿は、労働党が下野し、保守党も単独での過半数獲得に失敗するというこの結果を、経済投票論に依拠して分析する。具体的には、2010年総選挙の前後に行われた世論調査データ (British Election Studies 2010) を分析し、英国の有権者が投票先を選ぶ際、経済の4つの面が考慮されたことを示す。4つの面とはすなわち、（1）合意争点、（2）経済政策に対する立場、（3）資産の有無、（4）経済危機についての認識である。これらの4つの次元が投票先の決定に影響を及ぼすが、常に4つすべてが影響するわけではないことも明らかにされる。有権者が直面する選択肢が異なれば、影響力を持つ要因も異なる。</p>
 <p>理論的に予測される通り、選挙時に与党であった労働党に投票し易いのは、（1）景気が良いと判断し、（2）社会民主的な政策を好み、（3）持家ではなく借家に住んでおり、（4）経済危機の影響を受けていないと考えている有権者であることが示される。さらに、景気が悪いと判断した有権者は、野党の中でも保守党ではなく自由民主党を選ぶ確率が高い。同様に、経済危機の影響を受けたと考えている有権者は、自由民主党の代わりに保守党を選ぶ確率が高くなる。</p>
