add detailed explanation of R installation

--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -35,6 +35,13 @@
     <!-- end .header --></div>
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
+  
+  <h2>RとRStudioのインストール方法の解説</h2>
+    <ul>
+      <li><a href="docs/install-R_ubuntu.pdf" target="_blank">Linux (Ubuntu) 編</a> (PDF, 4.6MB)</li>
+      <li><a href="docs/install-R_macOS.pdf" target="_blank">Windows 編</a> (PDF, 4.9MB)</a></li>
+      <li><a href="docs/install-R_windows.pdf" target="_blank">Windows 編</a> （PDF, 5.8MB）</li>
+    </ul>
 
 
    <h2>Beamer用テーマ</h2>
