--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -108,7 +108,7 @@
     <li>カルレス・ボイッシュ, アリシア・アドセラ「憲法とデモクラシーの崩壊」　眞柄秀子, 井戸正伸 編『拒否権プレイーヤーと政策転換』pp.82-117（2007年, 早稲田大学出版部）</li>
   </ul>
 
-  <h3>賞・研究費・奨学金・</h3>
+  <h3>賞・研究費・奨学金</h3>
 
   <ul>
     <li>科学研究費補助金・基盤B・No.19H01447（2019-22年度）[研究代表者] </li>
