--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -39,6 +39,7 @@
 
     <p>2020年度 <s>第1クォータ</s>　高知工科大学　経済・マネジメント学群</p>
     <p>[新型コロナウィルスの影響により、1Qの開講は見合わせ、2Q以降に延期します]</p>
+    <p>[（6月7日追記） 2020年度の統計学2は、夏期集中講義として開講することになりました。]
 
   <!--<h4><a class="black" href="docs/syllabus-stat2_2020-1Q.pdf">シラバス</a></h4>-->
 
